<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    tools:context=".newmeetup_Main2Activity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/heading_newmeetup"
        android:layout_marginTop="20dp"
        android:textColor="#FF424242"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/headingnewmeetup"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativelayout1"
        android:layout_below="@id/heading_newmeetup"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@+id/about_themeetup"
            android:background="#FF616161"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/about_themeetup"
            android:text="About the Meetup"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:textColor="#FF616161"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/about_themeetup"
            android:background="#FF616161"></LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_title"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/about_themeetup"
            android:layout_marginTop="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputtitle"
                android:fontFamily="casual"
                android:textSize="15sp"
                android:textColor="#FF757575"
                android:hint="@string/title"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_description"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/input_title">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputdescription"
                android:hint="@string/descripton"
                android:fontFamily="casual"
                android:textSize="15sp"
                android:textColor="#FF757575"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:weightSum="90"
            android:orientation="horizontal"
            android:layout_below="@id/input_location"
            android:id="@+id/datetime_layout"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/date"
                android:text="Date"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_weight="30"
                android:layout_marginStart="5dp"
                android:background="@drawable/date_time_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/time_from"
                android:layout_toRightOf="@+id/date"
                android:text="Time"
                android:layout_weight="30"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:fontFamily="casual"
                android:textSize="15sp"
                android:background="@drawable/date_time_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/time_till"
                android:layout_toRightOf="@+id/time_from"
                android:text="Time"
                android:layout_weight="30"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:background="@drawable/date_time_button"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_location"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/input_description">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputlocation"
                android:fontFamily="casual"
                android:hint="@string/location"
                android:textSize="15sp"
                android:textColor="#FF757575"
                />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativelayout1"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@+id/about_thespeaker"
            android:background="#FF616161"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/about_thespeaker"
            android:text="About the Host"
            android:fontFamily="casual"
            android:textColor="#FF616161"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/about_thespeaker"
            android:background="#FF616161"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_name"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/about_thespeaker"
            android:layout_marginTop="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputname"
                android:fontFamily="casual"
                android:textSize="15sp"
                android:textColor="#FF757575"
                android:hint="@string/speaker_name"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_occupation"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/input_name">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputoccupation"
                android:hint="@string/speaker_occupation"
                android:textSize="15sp"
                android:fontFamily="casual"
                android:textColor="#FF757575"
                />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/meetup_create"
        android:text="Create"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="#FF00C853"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/newmeetup_progressbar"
            android:clickable="true"
            android:visibility="invisible"/>
    </RelativeLayout>

</RelativeLayout>


